--- a/archivo1.html
+++ b/archivo1.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>PRIMER archivo</h1>
+    <h1>PRIMER archivo MODIFICADO después del primer commit</h1>
 </body>
 </html>
